<resources>
    <string name="app_name">BigDeal</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_with_email_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_title">Title*</string>
    <string name="hint_description">Description*</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="hint_address">address</string>
    <string name="hint_date_begin">Date begin</string>
    <string name="hint_date_end">Date end</string>
    <string name="hint_price_deal">Price Deal* (-XX for % or price after reduction)</string>
    <string name="hint_price">Price</string>
    <string name="hint_link">Link</string>
    <string name="hint_add_comment">Add comment...</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_google_login">Login with Google</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_add_annonce">Add a Deal</string>
    <string name="add">Add</string>
    <string name="login_before">Please login in before</string>
    <string name="login">Login</string>
    <string name="auth_with_google_failed">Authentication failed.</string>
    <string name="title_activity_main">Home</string>
    <string name="no_result">No result</string>
    <string name="tab_new">New</string>
    <string name="tab_best">Best</string>
    <string name="select_picture">Select picture</string>
    <string name="add_photo">Add a photo</string>
    <string name="take_photo">Take a photo</string>
    <string name="choose_gallery">Choose from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="add_to_favorite">Added to favorite</string>
    <string name="remove_from_favorite">Removed from favorite</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_profil">Profil</string>
    <string name="title_activity_favorites">My favorites</string>
    <string name="title_activity_detail">Deal</string>
    <string name="title_activity_complete">Complete your profil</string>
    <string name="description">Description :</string>
    <string name="comments">Comments :</string>
    <string name="posted_in">Posted : </string>
    <string name="begin_in">Begin : </string>
    <string name="end_in">Expire : </string>
    <string name="no_comments">No comments.</string>
    <string name="edit">Edit</string>

    <string name="registration_failed">Registration failed</string>
    <string name="registration_success">Registration successful</string>
    <string name="email_sent">"We have sent you instructions to reset your password!"</string>
    <string name="email_fail_sent">"Failed to send reset email!"</string>
    <string name="enter_email">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="password_too_short">Password too short, enter minimum 6 characters!</string>
    <string name="share">Share !</string>
    <string name="deal">Deal</string>

    <string name="profil">Profil</string>
    <string name="my_favorites">My favorites</string>
    <string name="maps">Maps</string>
    <string name="logout">Logout</string>

    <string name="title_required">Title required</string>
    <string name="description_required">Description required</string>
    <string name="price_deal_required">Price deal required</string>
    <string name="link_field_error">Provide good url</string>
    <string name="username_required">Username required</string>
    <string name="username_field_error">Username length or contains invalid caracters</string>
    <string name="update">Update</string>
    <string name="complete_your_profile">Please complete your profil</string>

</resources>
